RESOLVED FIXED61980
Assert when trying to unload a module that failed to load
https://bugs.webkit.org/show_bug.cgi?id=61980
Summary Assert when trying to unload a module that failed to load
Anders Carlsson
Reported 2011-06-02 17:24:26 PDT
Assert when trying to unload a module that failed to load
Attachments
Patch (1.08 KB, patch)
2011-06-02 17:25 PDT, Anders Carlsson
mrowe: review+
Anders Carlsson
Comment 1 2011-06-02 17:25:17 PDT
Anders Carlsson
Comment 2 2011-06-02 17:28:15 PDT
Note You need to log in before you can comment on or make changes to this bug.