2011-06-02  Anders Carlsson  <andersca@apple.com>

Reviewed by Mark Rowe.

        Assert when trying to unload a module that failed to load
        https://bugs.webkit.org/show_bug.cgi?id=61980

        Remove an invalid ASSERT; it's OK for m_bundle to be null if the bundle failed to load.

        * Platform/mac/ModuleMac.mm:
        (WebKit::Module::unload):


Canonical link: https://commits.webkit.org/77444@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87968 268f45cc-cd09-0410-ab3c-d52691b4dbfc